classDiagram
    class FileSearcher {
        -directory: str
        -search_terms: List[str]
        -include_subdirs: bool
        -search_type: str
        -file_extensions: List[str]
        -context_length: int
        -cancel_flag: bool
        +result_found: pyqtSignal
        +progress_update: pyqtSignal
        +search_completed: pyqtSignal
        +run()
        +cancel_search()
        -process_files(executor, root, files)
        -search_file(file_path)
        -search_pdf(file_path)
        -search_text(file_path)
        -match_search_terms(text)
    }
    class QThread {
        <<PyQt5>>
    }
    class ConfigManager {
        <<external>>
    }
    class MainWindow {
        -config_manager: ConfigManager
    }
    class PDFHandler {
        +open_pdf(file_path, acrobat_path, current_position, search_terms)
        +highlight_pdf(pdf_path, search_terms)
    }
    class TextHandler {
        +open_text_file(file_path, search_terms, html_font_size)
        +highlight_text_file(file_path, search_terms, html_font_size)
    }
    class Utils {
        +normalize_path(file_path)
        +is_network_file(file_path)
        +check_file_accessibility(file_path)
        +read_file_with_auto_encoding(file_path)
    }

    FileSearcher --|> QThread
    MainWindow --> ConfigManager
    MainWindow --> FileSearcher
    FileSearcher ..> PDFHandler : uses
    FileSearcher ..> TextHandler : uses
    FileSearcher ..> Utils : uses
    PDFHandler ..> Utils : uses
    TextHandler ..> Utils : uses
